--- a/style.css
+++ b/style.css
@@ -748,7 +748,7 @@ body.page:not(.twentyseventeen-front-page) .entry-content .wp-block-mkl-section-
     .wp-block-columns:not(.columns-content-vertically-centered) .wp-block-column + .wp-block-column {
       margin-top: 0; } }
 
-.wp-block-columns + .wp-block-columns,
+.wp-block-columns + .wp-block-columns:not(.columns-content-vertically-centered),
 h1 + .wp-block-columns,
 h2 + .wp-block-columns,
 h3 + .wp-block-columns,
@@ -756,7 +756,7 @@ h4 + .wp-block-columns,
 h5 + .wp-block-columns {
   margin-top: -2rem; }
   @media (min-width: 600px) {
-    .wp-block-columns + .wp-block-columns,
+    .wp-block-columns + .wp-block-columns:not(.columns-content-vertically-centered),
     h1 + .wp-block-columns,
     h2 + .wp-block-columns,
     h3 + .wp-block-columns,
